# platformGame

./: .gitignore  AStar.cpp  AStar.h  Achievement.cpp  Achievement.h  Animation.cpp  Animation.h  Attack.cpp  Attack.h  AttackTarget.cpp  AttackTarget.h  AutoAttack.cpp  AutoAttack.h  AutoFlying.cpp  AutoFlying.h  AutoMelee.cpp  AutoMelee.h  AutoMovement.h  AutoRanged.cpp  AutoRanged.h  AutoStarRanged.cpp  AutoStarRanged.h  AutoWalking.cpp  AutoWalking.h  Bullet.cpp  Bullet.h  Button.cpp  Button.h  CMakeLists.txt  Droid.cpp  Droid.h  DropDownList.cpp  DropDownList.h  FlyingMovement.cpp  FlyingMovement.h  Game.cpp  Game.h  GameCharacter.cpp  GameCharacter.h  GameState.cpp  (+60 more)
Config/: settingsState_keys.ini  supported_keys.ini
Levels/: Boss.ini  FlyingEnemy.ini  WalkingEnemy.ini  enemies1.ini  room1.ini  room2.ini  room3.ini  room4.ini
images/: tile dictionary
test/: CMakeLists.txt  EnemyTest.cpp  Gamecharactertest.cpp  ItemTest.cpp  Maptest.cpp  Maptests.cpp  RunallTests.cpp  testTest.cpp
test/lib/googletest/: CMakeLists.txt
